Slight re-organization of project, wrote EVUITest2 js library to replace EVUITest library.

--- a/test/EventUITest/Pages/Index.cshtml
+++ b/test/EventUITest/Pages/Index.cshtml
@@ -6,3 +6,10 @@
 
 <div class="text-center">
 </div>
+
+@section Scripts
+{
+    <script src="test_src/EVUITest2.js"></script>    
+    <script><
+    </script>
+}
