Got EVUITest2 working properly.

--- a/test/EventUITest/Pages/Index.cshtml
+++ b/test/EventUITest/Pages/Index.cshtml
@@ -9,7 +9,8 @@
 
 @section Scripts
 {
-    <script src="test_src/EVUITest2.js"></script>    
-    <script><
+    <script src="evuitest/EVUITest2.js"></script>    
+    <script>
+
     </script>
 }
