Got EVUITest.TestHostController working most of the way. Fixed spelling errors in documentation.

--- a/test/EventUITest/Pages/Index.cshtml
+++ b/test/EventUITest/Pages/Index.cshtml
@@ -9,7 +9,7 @@
 
 @section Scripts
 {
-    <script src="evuitest/EVUITest2.js"></script>    
+    <script src="evuitest/EVUITest.js"></script>    
     <script>
 
     </script>
