Disconnecting old test framework from test site.

--- a/test/EventUITest/Pages/Shared/_EVUILayout.cshtml
+++ b/test/EventUITest/Pages/Shared/_EVUILayout.cshtml
@@ -44,6 +44,8 @@
     <script src="evuisrc/Modules/TreeView.js"></script>
     <script src="evuisrc/Modules/UIHandler.js"></script>
 
+    <script src="evuisrc/Test/EVUITest.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
