Fixing issues with Binder not working when only a url is specified for HTML content in markup or declaration.

--- a/test/EventUITest/wwwroot/partials/Binder/Recursion/TopContent.html
+++ b/test/EventUITest/wwwroot/partials/Binder/Recursion/TopContent.html
@@ -9,7 +9,7 @@
     <div evui-binder-source='subArray' evui-binder-html-key='arrayContent' btm-binder-mode="append">
     </div>
     <span>SubArray Again</span>
-    <div evui-binder-source='subArray' evui-binder-html-key='arrayContent' btm-binder-mode="append">
+    <div evui-binder-source='subArray' evui-binder-html-src='/Partials/Binder/Recursion/ArrayContent.html' btm-binder-mode="append">
     </div>
     <span>Array within Array</span>
     <ul evui-binder-source="subArray[3]" evui-binder-html-key='arraySubContent' btm-binder-mode="append">
