Updating EVUITest site to properly resolve the EVUITest file.

--- a/test/EventUITest/Pages/Shared/_EVUILayout.cshtml
+++ b/test/EventUITest/Pages/Shared/_EVUILayout.cshtml
@@ -22,30 +22,29 @@
     </footer>
 
     <!--ASP's "asp-src-include" tag helper doesn't like glob patterns that point at files that fall outside of the wwwroot folder, so we have to manually include each module.-->
-    <script src="/evuisrc/EventUI.js"></script>
-    <script src="/evuisrc/Modules/Binding.js"></script>
-    <script src="/evuisrc/Modules/Core.js"></script>
-    <script src="/evuisrc/Modules/Dialogs.js"></script>
-    <script src="/evuisrc/Modules/Diff.js"></script>
-    <script src="/evuisrc/Modules/Dom.js"></script>
-    <script src="/evuisrc/Modules/DomEvents.js"></script>
-    <script src="/evuisrc/Modules/DomTree.js"></script>
-    <script src="/evuisrc/Modules/Dropdowns.js"></script>
-    <script src="/evuisrc/Modules/Enums.js"></script>
-    <script src="/evuisrc/Modules/Events.js"></script>
-    <script src="/evuisrc/Modules/EventStream.js"></script>
-    <script src="/evuisrc/Modules/HtmlLoader.js"></script>
-    <script src="/evuisrc/Modules/Http.js"></script>
-    <script src="/evuisrc/Modules/IFrames.js"></script>
-    <script src="/evuisrc/Modules/Modals.js"></script>
-    <script src="/evuisrc/Modules/Observers.js"></script>
-    <script src="/evuisrc/Modules/Panes.js"></script>
-    <script src="/evuisrc/Modules/PopIns.js"></script>
-    <script src="/evuisrc/Modules/Styles.js"></script>
-    <script src="/evuisrc/Modules/TreeView.js"></script>
-    <script src="/evuisrc/Modules/UIHandler.js"></script>
-
-    <script src="/evuisrc/Test/EVUITest.js"></script>
+    <script src="/evuisrc/raw/EventUI.js"></script>
+    <script src="/evuisrc/raw/Modules/Binding.js"></script>
+    <script src="/evuisrc/raw/Modules/Core.js"></script>
+    <script src="/evuisrc/raw/Modules/Dialogs.js"></script>
+    <script src="/evuisrc/raw/Modules/Diff.js"></script>
+    <script src="/evuisrc/raw/Modules/Dom.js"></script>
+    <script src="/evuisrc/raw/Modules/DomEvents.js"></script>
+    <script src="/evuisrc/raw/Modules/DomTree.js"></script>
+    <script src="/evuisrc/raw/Modules/Dropdowns.js"></script>
+    <script src="/evuisrc/raw/Modules/Enums.js"></script>
+    <script src="/evuisrc/raw/Modules/Events.js"></script>
+    <script src="/evuisrc/raw/Modules/EventStream.js"></script>
+    <script src="/evuisrc/raw/Modules/HtmlLoader.js"></script>
+    <script src="/evuisrc/raw/Modules/Http.js"></script>
+    <script src="/evuisrc/raw/Modules/IFrames.js"></script>
+    <script src="/evuisrc/raw/Modules/Modals.js"></script>
+    <script src="/evuisrc/raw/Modules/Observers.js"></script>
+    <script src="/evuisrc/raw/Modules/Panes.js"></script>
+    <script src="/evuisrc/raw/Modules/PopIns.js"></script>
+    <script src="/evuisrc/raw/Modules/Styles.js"></script>
+    <script src="/evuisrc/raw/Modules/TreeView.js"></script>
+    <script src="/evuisrc/raw/Modules/UIHandler.js"></script>
+    <script src="/evuisrc/test/EVUITest.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
