Got automated testing partiall working.

--- a/test/EventUITest/Pages/Unit/AutoRun.cshtml
+++ b/test/EventUITest/Pages/Unit/AutoRun.cshtml
@@ -1,4 +1,26 @@
 ﻿@page
 @model EventUITest.Pages.Unit.AutoRunModel
 @{
+    Layout = "_EVUITestLayout";
 }
+
+
+<div class="testOutputContainer">
+</div>
+
+@section Scripts
+{
+    <script src="/js/UnitTesting/UnitTestHost.js"></script>
+    <script>
+        var args = {
+            runOrder: ["/evuitest/_evuitest/testhost/testHostBasic.js", "/evuitest/_evuitest/testhost/testHostUnAwaited.js"],
+            sessionId: "abc123"
+        }
+
+        var host = new EVUIUnit.Controllers.HostController();
+        host.initialize(args, document.body);
+        host.runAllAsync();
+
+    </script>
+}
+
