--- a/test/EventUITest/Pages/Shared/_EVUITestLayout.cshtml
+++ b/test/EventUITest/Pages/Shared/_EVUITestLayout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - EventUITest</title>
+    <link href="/css/site.css" rel="stylesheet" />
     @RenderSection("CSS", required: false)
 </head>
 <body>
