--- a/test/EventUITest/wwwroot/css/site.css
+++ b/test/EventUITest/wwwroot/css/site.css
@@ -20,3 +20,34 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.testOutputContainer {
+    background-color: black;
+    height: 1000px;
+    width: 1700px;
+    color: white;
+}
+
+.output-normal {
+    width: 100%;
+    color: white;
+    font-family: "Lucida Console", "Courier New", monospace;
+}
+
+.output-error {
+    width: 100%;
+    color: red;
+    font-family: "Lucida Console", "Courier New", monospace;
+}
+
+.output-critical {
+    width: 100%;
+    color: darkred;
+    font-family: "Lucida Console", "Courier New", monospace;
+}
+
+.output-console {
+    width: 100%;
+    color: deepskyblue;
+    font-family: "Lucida Console", "Courier New", monospace;
+}
