--- a/test/EventUITest/Pages/Shared/_EVUITestLayout.cshtml
+++ b/test/EventUITest/Pages/Shared/_EVUITestLayout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <h1>EventUI Test Harness</h1>
     </header>
-    <div class="container">
+    <div class="container fullscreen">
         <main role="main" class="pb-3">
             @RenderBody()
 
