Many changes to testing system. Now uses an object as the parameter into a test instead of two functions, now returns the list of tests that were run by the host, UnitTestHost now reports the results of all tests.

--- a/test/EventUITest/Pages/Unit/AutoRun.cshtml
+++ b/test/EventUITest/Pages/Unit/AutoRun.cshtml
@@ -15,11 +15,9 @@
         const TestHostServerArgs = @Model.GetHostArgsJSON()
     </script>
     <script>
-
-        var host = new EVUIUnit.Controllers.HostController();
+        var host = new EVUIUnit.HostController();
         host.initialize(TestHostServerArgs, document.body);
         host.runAllAsync();
-
     </script>
 }
 
