--- a/test/EventUITest/Pages/Unit/TestRunner.cshtml
+++ b/test/EventUITest/Pages/Unit/TestRunner.cshtml
@@ -12,7 +12,7 @@
     </script>
     <script>
 
-        var runner = new EVUIUnit.Controllers.TestRunner();
+        var runner = new EVUIUnit.TestRunner();
         runner.initialize(TestRunnerServerArgs);
         runner.run();
 
