Added links to test site page structure.

--- a/test/EventUITest/Pages/Index.cshtml
+++ b/test/EventUITest/Pages/Index.cshtml
@@ -5,6 +5,14 @@
 }
 
 <div class="text-center">
+    <ul style="list-style:none">
+        <li>
+            <a href="Scratchpad">Debug Scratchpad</a>
+        </li>
+        <li>
+            <a href="Unit">Unit Test Runner</a>
+        </li>
+    </ul>
 </div>
 
 @section Scripts
