--- a/test/EventUITest/Pages/Unit/Index.cshtml
+++ b/test/EventUITest/Pages/Unit/Index.cshtml
@@ -2,3 +2,12 @@
 @model EventUITest.Pages.Unit.IndexModel
 @{
 }
+
+<ul style="list-style: none;">
+    <li>
+        <a href="Unit/AutoRun">Auto-Run All</a>
+    </li>
+    <li>
+        <a href="Unit/Files">Debug Specific Test File</a>
+    </li>
+</ul>
