--- a/test/EventUITest/Pages/Unit/AutoRun.cshtml
+++ b/test/EventUITest/Pages/Unit/AutoRun.cshtml
@@ -17,7 +17,7 @@
     <script>
         var host = new EVUIUnit.HostController();
         host.initialize(TestHostServerArgs, document.body);
-        host.runAllAsync();
+        var testResults = await host.runAllAsync();
     </script>
 }
 
