--- a/test/EventUITest/Pages/Unit/TestRunner.cshtml
+++ b/test/EventUITest/Pages/Unit/TestRunner.cshtml
@@ -7,6 +7,14 @@
 @section Scripts
 {
     <script src="/js/UnitTesting/UnitTestRunner.js"></script>
+    @if (Model.ServerArgs.commonLibPaths != null)
+    {
+        @foreach (string commonFile in Model.ServerArgs.commonLibPaths)
+        {
+            <script src="@commonFile"></script>
+        }
+    }
+
     <script>
         const TestRunnerServerArgs = @Model.GetServerArgsJSON();
     </script>
