--- a/test/EventUITest/Pages/Unit/AutoRun.cshtml
+++ b/test/EventUITest/Pages/Unit/AutoRun.cshtml
@@ -15,9 +15,14 @@
         const TestHostServerArgs = @Model.GetHostArgsJSON()
     </script>
     <script>
-        var host = new EVUIUnit.HostController();
-        host.initialize(TestHostServerArgs, document.body);
-        host.runAllAsync();
+        var execute = async function ()
+        {
+            var host = new EVUIUnit.HostController();
+            host.initialize(TestHostServerArgs, document.body);
+            console.log(await host.runAllAsync());
+        };
+
+        execute();
     </script>
 }
 
