--- a/test/EventUITest/Pages/Scratchpad/Binder/Benchmark.cshtml
+++ b/test/EventUITest/Pages/Scratchpad/Binder/Benchmark.cshtml
@@ -13,6 +13,7 @@
 <button type='button' class='btn btn-primary btn-block' id='update'>Update every 10th row</button>
 <button type='button' class='btn btn-primary btn-block' id='clear'>Clear</button>
 <button type='button' class='btn btn-primary btn-block' id='swaprows'>Swap Rows</button>
+<button type='button' class='btn btn-primary btn-block' id='insert'>Insert Row</button>
 
 <table>
     <tbody id="tbody"> 
