Added recursion filter to deep extender, overhauled pane creation logic to not blindly deep copy all objects in the yolo graph.

--- a/test/EventUITest/Pages/Shared/_EVUILayout.cshtml
+++ b/test/EventUITest/Pages/Shared/_EVUILayout.cshtml
@@ -41,6 +41,7 @@
     <script src="/evuisrc/raw/Modules/Modals.js"></script>
     <script src="/evuisrc/raw/Modules/Observers.js"></script>
     <script src="/evuisrc/raw/Modules/Panes.js"></script>
+    <script src="/evuisrc/raw/Modules/Panes2.js"></script>
     <script src="/evuisrc/raw/Modules/PopIns.js"></script>
     <script src="/evuisrc/raw/Modules/Styles.js"></script>
     <script src="/evuisrc/raw/Modules/TreeView.js"></script>
