Got centered, cropped, and fullscreen show modes working.

--- a/test/EventUITest/Pages/Scratchpad/Panes/ChainOpen.cshtml
+++ b/test/EventUITest/Pages/Scratchpad/Panes/ChainOpen.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EventUITest.Pages.Scratchpad.Panes.DropdownCascadeCloseModel
+@model EventUITest.Pages.Scratchpad.Panes.ChainOpenModel
 @{
 }
 
