--- a/test/EventUITest/Pages/Scratchpad/Window/ShowFromMarkup.cshtml
+++ b/test/EventUITest/Pages/Scratchpad/Window/ShowFromMarkup.cshtml
@@ -3,11 +3,11 @@
 @{
 }
 
-<button evui-pane-src="/Partials/Pane/Http.html" evui-pane-show-settings='absolutePosition.top: 500; showTransition.css:{"display": "block", "backgroundColor": "blue"}; showTransition.duration:3000; absolutePosition.left: 500;' onclick="$evui.showPane(event)">Via HTTP</button>
-<button evui-pane-src="/Partials/Pane/Http.html" evui-pane-show-settings='absolutePosition.top: 500; showTransition.css:{"display": "block", "backgroundColor": "blue"}; showTransition.duration:3000; absolutePosition.left: 500;' onclick="$evui.showPane(event)">Via HTTP2</button>
+<button evui-pane-src="/Partials/Pane/Http.html" evui-pane-show='absolute {{top: 500, left: 500}, showTransition: { css:{"display": "block", "backgroundColor": "blue"}, duration:3000}}' onclick="$evui.showPane(event)">Via HTTP</button>
+<button evui-pane-src="/Partials/Pane/Http.html" evui-pane-show='absolute {{top: 500, left: 500}, showTransition: { css:{"display": "block", "backgroundColor": "blue"}, duration:3000}}' onclick="$evui.showPane(event)">Via HTTP2</button>
 <button evui-pane-id="http" onclick="$evui.hidePane(event)">Hide</button>
 
 @section Scripts
 {
-    <script src="/js/TestScript/Window/showFromMarkup.js"></script>
+    <script src="/js/TestScript/Panes/showFromMarkup.js"></script>
 }
